--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0",
     "react-merge-refs": "1.1.0",
     "stripe": "8.201.0",
     "swr": "1.2.0",
